--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="nr1">int</string>
     <string name="nr2">int</string>
     <string name="nr3">int</string>
+    <string name="y">Y</string>
+    <string name="r">R</string>
 </resources>
