--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,6 @@
 <resources>
     <string name="app_name">SleepingCapsule</string>
-    <string name="Snooze">Snooze</string>
-
-    <string name="save_as_favorite">Save as Favorite</string>
-    <string name="show_favorite">Show Favorite</string>
-    <string name="blue">blue</string>
-    <string name="green">green</string>
-    <string name="red">red</string>
-    <string name="nr1">int</string>
-    <string name="nr2">int</string>
-    <string name="nr3">int</string>
-
+    <string name="Snooze" />
 
     <string name="adjustPosition"> Adjust Position!</string>
 
@@ -37,20 +27,17 @@
     <string name="seatrestInt"> 15°</string>
 
     <string name="footrestInt"> 30°</string>
-    <string name="save_favorite_button" />
-    <string name="play_favorite_button" />
-    <string name="berg" />
-    <string name="dschungel" />
-    <string name="lagerfeuer" />
-    <string name="regen" />
-    <string name="strand" />
-    <string name="wald" />
-    <string name="bluetooth" />
-    <string name="spotify" />
-    <string name="musiclibrary" />
-
-    />
-
-
-    />
+    <string name="save_as_favorite">Save as Favorite</string>
+    <string name="show_favorite">Show Favorite</string>
+    <string name="blue">blue</string>
+    <string name="green">green</string>
+    <string name="red">red</string>
+    <string name="nr1">int</string>
+    <string name="nr2">int</string>
+    <string name="nr3">int</string>
+    <string name="light_intensity">Light Intensity</string>
+    <string name="color_code">Color Code</string>
+    <string name="light_off">Light Off</string>
+    <string name="light_on">Light On</string>
+    <string name="pick_from_colorwheel">Pick from Colorwheel</string>
 </resources>
