1. !! Alle drei bilschirme laufen jetzt als tasks!! -> alles was wir ändern bleibt somit gespeichert bis die app geschlossen wird! :D" Also laufen immer 4 tasks, die man schliesen muss, diese werden dann einfach neu aufgerufen oder nach vorn gebracht, falls diese bereits exestieren.
2.

Taskbar nach oben verschoben 1mm, weil schöner und blaue kleine linie jetzt weg.

3. Mukis linien angepasst.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="show_favorite">Show Favorite</string>
     <string name="blue">blue</string>
     <string name="green">green</string>
+    <string name="angle">angle</string>
     <string name="red">red</string>
     <string name="nr1">int</string>
     <string name="nr2">int</string>
