--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,10 @@
     <string name="picktheme"> Pick a theme sound</string>
     <string name="ownmusic"> Hear your own music</string>
     <string name="playbutton"> play button</string>
+    <string name="R">R</string>
+    <string name="G">G</string>
+    <string name="B">B</string>
+    <string name="hex">Hex:</string>
 
     />
 
