audio dateien hinzugefügt audio lässt sich abspielen textview zeigt welches theme gerade spielt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,8 @@
     <string name="chair">TODO</string>
     <string name="light">TODO</string>
     <string name="music">TODO</string>
+    <string name="angle" >angle</string>
+
 
     />
 
