--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="light">TODO</string>
     <string name="music">TODO</string>
     <string name="angle" >angle</string>
+    <string name="soundcontrol" >Themes SoundControl</string>
 
     />
 
