media player funktioniert

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="light_for">Light for:</string>
     <string name="Chair">chair</string>
     <string name="room">room</string>
+    <string name="stopsound">stop sound</string>
 
     />
 
